# pycontw2025

./: .gitignore  CNAME  DEPLOYMENT.md  LICENSE  PROJECT_INDEX.md  README.md  eslint.config.js  index.html  manifest.json  package-lock.json  package.json  tailwind.config.js  test_themes.md  themes.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-themes.yml  deploy.yml
assets/: index-DJgUfIpg.css  index-uH62oGYA.js  index-uH62oGYA.js.map
public/: 404.html  CNAME  manifest.json
public/resources/source/: GNUmakefile  (+1 more)
public/resources/source/tests/benchmark-ffi/framework/: __init__.py  crossover_analysis.py  environment.py  environment_control.py  execution_methodology.py  experimental_design.py  function_verification.py  hypothesis_verification.py  profiling.py  pyproject.toml  python_matrix.py  realtime_monitor.py  runner.py  statistics.py  timer.py  venv_integration.py
public/resources/source/tests/benchmark-ffi/framework/src/framework/: __init__.py
public/resources/source/tests/benchmark-ffi/implementations/pyo3_impl/: Cargo.toml  __init__.py  build.rs  pyo3_bench.py  pyproject.toml
public/resources/source/tests/benchmark-ffi/implementations/pyo3_impl/benchlib_pyo3/: __init__.py
public/resources/source/tests/benchmark-ffi/implementations/pyo3_impl/src/: lib.rs
public/resources/source/tests/rust_ffi/handcrafted_ffi/: Cargo.toml  build.rs
public/resources/source/tests/rust_ffi/handcrafted_ffi/src/: async_support.rs  error_handling.rs  lib.rs  python_types.rs
public/resources/source/tests/rust_ffi/pyo3_investigation/: Cargo.toml  pyo3_loader.py  setup.py
public/resources/source/tests/rust_ffi/pyo3_investigation/pyo3_investigation/: __init__.py
public/resources/source/tests/rust_ffi/pyo3_investigation/src/: bug_4627.rs  bug_4882.rs  lib.rs  performance.rs
scripts/: generate-manifest.js
src/: App.vue  main.ts
src/assets/: main.css
src/components/: CodeViewer.vue  DataVisualizer.vue  ErrorBoundary.vue  FolderTree.vue  LicenseModal.vue  LoadingState.vue  ResourceCard.vue  SkeletonLoader.vue
src/composables/: useAccessibility.ts  useFileNavigation.ts  useGitHubContent.ts  useServices.ts
src/router/: index.ts
src/services/: ConfigService.ts  ErrorService.ts  FileService.ts  NavigationService.ts  PerformanceService.ts  ServiceContainer.ts
src/tests/: setup.ts
src/types/: resources.ts
src/utils/: fileHelpers.ts
src/views/: BenchmarkData.vue  HomePage.vue  SourceCode.vue
theme-1/: index.html  manifest.json
theme-1/assets/: index-BlsON7mU.css  index-CKTssetR.js  index-CKTssetR.js.map
theme-2/: index.html  manifest.json
theme-2/assets/: index-BbJ59Mhn.css  index-CnKXi6GX.js  index-CnKXi6GX.js.map
theme-3/: index.html  manifest.json
theme-3/assets/: index-JQUhxThh.js  index-JQUhxThh.js.map  index-yz8x0BE0.css
theme-4/: index.html  manifest.json
theme-4/assets/: index-Doa9MoLL.js  index-Doa9MoLL.js.map  index-hZpWX1cm.css
theme-5/: index.html  manifest.json
theme-5/assets/: index-BTJTB7q_.js  index-BTJTB7q_.js.map  index-COYC6uzs.css
(+143 files in other folders)
