[project]
name = "framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "scc", email = "scc@scc.tw" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
