[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "benchlib_pyo3"
version = "0.1.0"
description = "PyO3 bindings for FFI benchmark library"
authors = [{name = "FFI Benchmark Suite"}]
requires-python = ">=3.7"
dependencies = ["numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]